// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ShopifyMoneyAmount/> render() should render 0 as a number 1`] = `
<span>
  <ShopifyMoneySymbol
    currencyCode="AUD"
    short={false}
  />
  0.00
</span>
`;

exports[`<ShopifyMoneyAmount/> render() should render 0 as an horizontal dash symbol 1`] = `"—"`;

exports[`<ShopifyMoneyAmount/> render() should render 1`] = `
<span>
  <ShopifyMoneySymbol
    currencyCode="AUD"
    short={false}
  />
  9.99
</span>
`;

exports[`<ShopifyMoneyAmount/> render() should render as negative value 1`] = `
<span>
  - 
  <ShopifyMoneySymbol
    currencyCode="AUD"
    short={false}
  />
  9.99
</span>
`;

exports[`<ShopifyMoneyAmount/> render() should render with short symbol 1`] = `
<span>
  <ShopifyMoneySymbol
    currencyCode="AUD"
    short={true}
  />
  9.99
</span>
`;

exports[`<ShopifyMoneyAmount/> render() should render with symbol on right 1`] = `
<span>
  9.99
   
  <ShopifyMoneySymbol
    currencyCode="EUR"
    short={false}
  />
</span>
`;
